# commando

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  board.md  release.toml
.github/workflows/: ci.yml
src/: app.rs  facade.rs  interactive.rs  lib.rs  main.rs  screen_manager.rs
src/app/: events.rs  mod.rs  splash.rs  state.rs  traits.rs  ui.rs
src/components/: mod.rs  text_block.rs
src/features/: commit_types.rs  mod.rs
src/features/commit_type_screen/: mod.rs
src/features/commit_type_selection/: content.rs  events.rs  footer.rs  header.rs  ui.rs
src/features/welcome_screen/: content.rs  events.rs  footer.rs  header.rs  mod.rs  ui.rs
src/screen/: manager.rs  mod.rs  my_initial_screen.rs
src/state/: in_memory.rs  manager.rs  mod.rs
src/ui/: mod.rs  render.rs
src/utils/: ui.rs
