[package]
name = "commando"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that help you write conventional commit messages interactively."
license = "GPL-3.0"
authors = ["phastboy stationphast@gmail.com"]
readme = "README.md"
homepage = "https://github.com/phastboy/commando"
repository = "https://github.com/phastboy/commando"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
tui = "0.19.0"
